2013-01-16  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_api.php: Added 'agent_name' and
	'module_name' in option 'create_event'.

2013-01-16  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Hide the history events tab
	when history events are disabled

2013-01-16  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/functions_graph.php
	include/functions_events.php
	include/javascript/pandora_events.js
	include/functions_config.php
	operation/events/events_list.php
	operation/events/events.php: Create a new
	event visor to metaconsole history events

	* include/functions_api.php: Added a new API function
	to create netflow filters

2013-01-16 Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_api.php: Change 'add comments' and
	'owner user' in create events.

2013-01-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php: Fixed language translation in 
	metaconsole.

2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

        * pandora_console_install: Fixed directory install for
	SUSE.

	MERGED FROM 4.0.2

2013-01-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	include/constants.php
	operation/events/events_list.php: Added two new
	criticity modes in the event filter. Critical or warning 
	and not normal

	* operation/menu.php: Delete the metaconsole menu enterprise call
	from operation menu

2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_visual_map.php: Now modules with warning
	status and alert fired are in yellow with orange border, before
	they were red with orange border.
	* include/constants.php: Mew constant for visual map to
	identify modules with warning status and alerts fired.

	MERGED FROM 4.0.2
	
2013-01-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/postgresql.php
	include/db/mysql.php
	include/db/oracle.php: Fixed function get_system_time when 
	timesource is system.
