@@ -1,3 +1,12 @@
+2013-01-17  Sergio Martin <sergio.martin@artica.es>
+
+	* operation/events/events_list.php
+	images/books.png
+	godmode/reporting/reporting_builder.item_editor.php: Adapt
+	the reports item of events to metaconsole, add a new 
+	image to history events and fix little bugs in events list
+	as parameters pass in pagination
+
 2013-01-16  Vanessa Gil <vanessa.gil@artica.es>
 
 	* include/functions_api.php: Added 'agent_name' and
